--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,10 +10,10 @@ html{
   scroll-behavior: smooth;
   scroll-padding-top: 90px;
 }
-body{
 
-  
+body{
   background-color: rgb(7, 6, 7);
+  color: white;
 }
 
 .service-content {
@@ -22,4 +22,8 @@ body{
   margin-left: 5px;
   padding-top: 10px;
   background-color: rgb(0, 0, 0);
+}
+
+span{
+  color:rgb(255, 0, 0);
 }
